# MultiModalAITutor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/agent/: agent.py  generation.py  title_generation.py  tools_registry.py
app/auth/: auth_service.py  jwt_handler.py  password_utils.py
app/database/: chat_repository.py  health_check.py  mongodb.py  profile_repository.py  user_repository.py
app/memory/: conversation_memory.py
app/models/: chat_model.py  profile_model.py  user_model.py
app/rag/: ingestion.py  retriever.py
app/tools/: market_price_tool.py  rag_tool.py  search_tool.py  weather_tool.py
app/translation/: translator.py
app/ui/: auth_page.py  chat_page.py
app/utils/: chat_history.py  extract_text.py  hash.py  validation_utils.py
docker/: Dockerfile
faiss_index/: index.faiss  index.pkl
