[project]
name = "agribot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "streamlit-cookies-manager>=0.2.0",
]
